--- a/Food Web/home.html
+++ b/Food Web/home.html
@@ -147,28 +147,47 @@
       <img src="wave1.png" class="bottom-img" alt="Wave Image">
      </div>
     <!-----------------------------------------------TEA Section------------------------------------------------>
-    <section>
+    <!-- <section>
       <div class="container-fluid mt-4" id="container-body2">
         <div class="row">
-           <div class="col-md-12 mt-4">
+           <div class="col-lg-4 col-md-6 col-sm-12 mt-4">
             <h1 class="display-6">Here some Beverages!!</h1>
             <h5 class="text-center">Hello guys here's the menu</h5>
          </div>
-           <div class="col-lg-4 col-md-6 mb-4">
+           <div class="col-lg-4 col-md-6 col-sm-12 mb-4">
             <a href="#"><img class="ms-5" src="tea.jpg" alt="TEA" width="400px" height="400px"></a>
             <p class="text-center"> Tea is more than a beverage; it's a ritual of serenity, patience, and quiet joy</p>
+           </div>
+           <div class="col-lg-4 col-md-6 col-sm-12 mb-4">
+            <a href="#"><img class="ms-5" src="coffee.jpg" alt="Coffee" width="400px" height="400px"></a>
+            <p class="text-center">A cup of coffee is a hug in a mug, offering warmth, comfort, and a boost to start the day</p>
+           </div>
+           <div class="col-lg-4 col-md-6 col-sm-12 mb-4">
+            <a href="#"><img class="ms-5" src="lemon tea.jpg" alt="Coffee" width="400px" height="400px"></a>
+            <p class="text-center">Sip on lemon tea and let the crisp notes of citrus awaken your senses and uplift your spirit</p>
+           </div>
+        </div>
+      </div>
+    </section>  -->
+    <section>
+      <div class="container-fluid mt-4 bg-white" id="container-body2">
+        <div class="row">
+           <div class="col-md-12 mt-4">
+             <h1 class="display-6">Here some Beverages!!</h1>
+             <p class="text-center">Hello guys here's the menu</p>
+           </div>
+           <div class="col-lg-4 col-md-6 mb-4">
+            <a href="#"><img class="ms-5" src="tea.jpg" alt="Tea" width="400px" height="400px"></a>
+            <p class="text-center">Tea is more than a beverage; it's a ritual of serenity, patience, and quiet joy</p>
            </div>
            <div class="col-lg-4 col-md-6 mb-4">
             <a href="#"><img class="ms-5" src="coffee.jpg" alt="Coffee" width="400px" height="400px"></a>
             <p class="text-center">A cup of coffee is a hug in a mug, offering warmth, comfort, and a boost to start the day</p>
            </div>
            <div class="col-lg-4 col-md-6 mb-4">
-            <a href="#"><img class="ms-5" src="lemon tea.jpg" alt="Coffee" width="400px" height="400px"></a>
+            <a href="#"><img class="ms-5" src="lemon tea.jpg" alt="Lemon" width="400px" height="400px"></a>
             <p class="text-center">Sip on lemon tea and let the crisp notes of citrus awaken your senses and uplift your spirit</p>
            </div>
-        </div>
-      </div>
-    </section>
     <div>
       <img src="wave1.png" class="bottom-img" alt="Wave Image">
      </div>
